# parallel_computing

./: .gitignore  CMakeLists.txt  README.md  libbuilder.cmake  text.txt
src/: lr1.cpp  lr2.cpp  lr3.cpp  main.cpp
src/include/: arch.h
